// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWrapper snapshots tests renders TextField component 1`] = `
<Fragment>
  <ForwardRef(TextField)
    InputLabelProps={
      Object {
        "data-testid": "test-label",
        "hidden": false,
        "htmlFor": "test-input",
        "id": "test-label",
        "shrink": undefined,
      }
    }
    ariaLabelledby="fake-id"
    floatingLabelText="This is a test textfield component"
    fullWidth={true}
    id="test"
    inputProps={
      Object {
        "aria-label": undefined,
        "aria-labelledby": "fake-id",
        "data-analyticsid": "test-input",
        "data-testid": "test-input",
        "id": "test-input",
        "label": undefined,
      }
    }
    name="testField"
    type="text"
    variant="standard"
  />
</Fragment>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component appending a class 1`] = `
<Fragment>
  <ForwardRef(TextField)
    InputLabelProps={
      Object {
        "data-testid": "test-label",
        "hidden": false,
        "htmlFor": "test-input",
        "id": "test-label",
        "shrink": undefined,
      }
    }
    ariaLabelledby="fake-id"
    className="requiredField"
    floatingLabelText="This is a test textfield component"
    fullWidth={true}
    id="test"
    inputProps={
      Object {
        "aria-label": undefined,
        "aria-labelledby": "fake-id",
        "data-analyticsid": "test-input",
        "data-testid": "test-input",
        "id": "test-input",
        "label": undefined,
      }
    }
    name="testField"
    type="text"
    variant="standard"
  />
</Fragment>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component with shrink:true 1`] = `
<Fragment>
  <ForwardRef(TextField)
    InputLabelProps={
      Object {
        "data-testid": "test-label",
        "hidden": false,
        "htmlFor": "test-input",
        "id": "test-label",
        "shrink": true,
      }
    }
    ariaLabelledby="fake-id"
    floatingLabelText="This is a test textfield component"
    floatinglabelfixed={true}
    fullWidth={true}
    id="test"
    inputProps={
      Object {
        "aria-label": "test",
        "aria-labelledby": "fake-id",
        "data-analyticsid": "test-input",
        "data-testid": "test-input",
        "id": "test-input",
        "label": "test",
      }
    }
    label="test"
    name="testField"
    type="text"
    variant="standard"
  />
</Fragment>
`;
